--- a/sensor_web_server/templates/table.html
+++ b/sensor_web_server/templates/table.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wireless Network Mapper</title>
+    <title>Sensor Web Server</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -9,8 +9,8 @@
     />
   </head>
   <body>
-    <h1>Wireless Network Mapper</h1>
-    <table class="centered thick-border">
+    <h1>Sensor Web Server</h1>
+    <!-- <table class="centered thick-border">
       <tr>
         <th>ESSID</th>
         <th>Signal Level (dBm)</th>
@@ -21,6 +21,6 @@
         <td>{{ v }}</td>
       </tr>
       {% endfor %}
-    </table>
+    </table> -->
   </body>
 </html>
