--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Sensor Web Server</title>
-    <!-- <link
+    <link
       rel="stylesheet"
       type="text/css"
       href="{{ url_for('static', filename='style.css') }}"
-    /> -->
+    />
   </head>
   <body>
     <h1>Sensor Web Server</h1>
