--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -9,6 +9,16 @@
     />
   </head>
   <body>
-    <h1>Sensor Web Server</h1>
+    <div>
+      <h1>Sensor Web Server</h1>
+    </div>
+    <div>
+      Last Proximity Alarm: { current_prox }
+      <br>
+      Last Doorbell Ring: { current_ring }
+      <br>
+      Is Door Opened or Closed? { current_state }
+      <br>
+    </div>
   </body>
 </html>
