--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -13,11 +13,11 @@
       <h1>Sensor Web Server</h1>
     </div>
     <div>
-      Last Proximity Alarm: { current_prox }
+      Last Proximity Alarm: {{ current_prox }}
       <br>
-      Last Doorbell Ring: { current_ring }
+      Last Doorbell Ring: {{ current_ring }}
       <br>
-      Is Door Opened or Closed? { current_state }
+      Is Door Opened or Closed? {{ current_state }}
       <br>
     </div>
   </body>
