--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -19,6 +19,10 @@
       <br>
       Is Door Opened or Closed? {{ current_state }}
       <br>
+      <form method="post" action="/">
+        <input type="submit" value="TRUE" name="unlock"/>
+      </form>
     </div>
   </body>
 </html>
+
