--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -19,6 +19,8 @@
       <br>
       Is Door Opened or Closed? {{ current_state }}
       <br>
+      last Door Unlock: {{ current_lock }}
+      <br>
       <form method="post" action="/">
         <input type="submit" value="TRUE" name="unlock"/>
       </form>
