--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -22,7 +22,7 @@
       last Door Unlock: {{ current_lock }}
       <br>
       <form method="post" action="/">
-        <input type="submit" value="TRUE" name="unlock"/>
+        <input type="submit" value="Unlock Door" name="unlock"/>
       </form>
     </div>
   </body>
