--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -22,7 +22,7 @@
       <br>
       Is Door Opened or Closed? {{ current_state }}
       <br>
-      last Door Unlock: {{ current_lock }}
+      Last Door Unlock: {{ current_lock }}
       <br>
       <form method="post" action="/">
         <input type="submit" value="Unlock Door" name="unlock"/>
