--- a/sensor_web_server/static/style.css
+++ b/sensor_web_server/static/style.css
@@ -1,19 +1,5 @@
 body {
 	text-align: center;
 	font-family: Arial, sans-serif;
-}
-
-.centered {
-	/* margin: auto; */
-	width: 100%;
-}
-
-.thick-border {
-	border: 3px solid black;
-	border-collapse: collapse;
-}
-
-th, td {
-	border: 1px solid black;
-	border-collapse: collapse;
+	font-size: 36;
 }
