--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -12,10 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div id="header">
       <h1>Sensor Web Server</h1>
     </div>
-    <div>
+    <div id="content">
       Last Proximity Alarm: {{ current_prox }}
       <br>
       Last Doorbell Ring: {{ current_ring }}
