--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -20,7 +20,7 @@
       <br>
       Last Doorbell Ring: {{ current_ring }}
       <br>
-      Is Door Opened or Closed? {{ current_state }}
+      Is Door Open? {{ current_state }}
       <br>
       Last Door Unlock: {{ current_lock }}
       <br>
