--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -15,6 +15,7 @@
     <div id="header">
       <h1>Sensor Web Server</h1>
     </div>
+    <div id="borderHead"></div>
     <div id="content">
       Last Proximity Alarm: {{ current_prox }}
       <br>
