--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -26,7 +26,7 @@
       Last Door Unlock: {{ current_lock }}
       <br>
       <form method="post" action="/">
-        <input type="submit" value="Unlock Door" name="unlock"/>
+        <input id="button" type="submit" value="Unlock Door" name="unlock"/>
       </form>
     </div>
   </body>
