--- a/sensor_web_server/templates/content.html
+++ b/sensor_web_server/templates/content.html
@@ -17,13 +17,13 @@
     </div>
     <div id="borderHead"></div>
     <div id="content">
-      Last Proximity Alarm: {{ current_prox }}
+      Last Proximity Alarm: {{ current_prox }} ({{ 0 }} seconds ago)
       <br>
-      Last Doorbell Ring: {{ current_ring }}
+      Last Doorbell Ring: {{ current_ring }} ({{ 0 }} seconds ago)
       <br>
       Is Door Open? {{ current_state }}
       <br>
-      Last Door Unlock: {{ current_lock }}
+      Last Door Unlock: {{ current_lock }} ({{ 0 }} seconds ago)
       <br>
       <form method="post" action="/">
         <input id="button" type="submit" value="Unlock Door" name="unlock"/>
